Implement navigation menu in index.html
Added navigation menu with links to Home, About, and Projects pages.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,28 @@
   <meta charset="utf-8">
   <title>Untitled</title>
 </head>
-<body>
-  aa
+<body class="home">
+  <nav>
+        <!-- Navigation Menu -->
+        <ul>
+            <li>
+                <a href="Index.html">
+                    <div class="Navigation_element">Home</div>
+                </a>
+            </li>
+            <li>
+                <a href="About.html">
+                    <div class="Navigation_element">About</div>
+                </a>
+            </li>
+            <li>
+                <a href="projects.html">
+                    <div class="Navigation_element">Projects</div>
+                </a>
+            </li>
+            <li class="Right">
+            </li>
+        </ul>
+    </nav>
 </body>
 </html>
