--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,7 @@
   <body>
     <h1>Projects</h1>
     <ul>
-      <li><a href="/chatserver">Chat server</a></li>
+      <li><a href="/projects/chatserver/index.html">Chat server</a></li>
     </ul>
   </body>
 </html>
