--- a/projects/chatserver/index.html
+++ b/projects/chatserver/index.html
@@ -1,1 +1,116 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<title>GurtChat - Login</title>
+<link rel="stylesheet" href="styles.css">
+<style>
+.login-container { max-width:400px;margin:50px auto;padding:20px;border-radius:10px;background:#f3f4f6;box-shadow:0 4px 10px rgba(0,0,0,0.1);}
+.login-container h1 { text-align:center;margin-bottom:20px;}
+.login-container input { width:100%;padding:10px;margin:5px 0;border-radius:5px;border:1px solid #ccc;}
+.login-container button { width:100%;padding:10px;margin-top:10px;border:none;border-radius:5px;background:#3b82f6;color:white;font-weight:bold;cursor:pointer;}
+.login-container button:hover { background:#2563eb; }
+.login-container a { color:#3b82f6; cursor:pointer; }
+</style>
+</head>
+<body>
+<div class="login-container">
+  <h1>Welcome to GurtChat</h1>
+  <div id="auth-forms">
+    <!-- Login Form -->
+    <div id="login-form">
+      <input type="email" id="login-email" placeholder="Email" required />
+      <input type="password" id="login-password" placeholder="Password" required />
+      <button id="login-btn">Login</button>
+      <p>Don’t have an account? <a id="show-register">Create one</a></p>
+    </div>
+    <!-- Register Form -->
+    <div id="register-form" style="display:none;">
+      <input type="text" id="register-username" placeholder="Username" required />
+      <input type="email" id="register-email" placeholder="Email" required />
+      <input type="password" id="register-password" placeholder="Password" required />
+      <button id="register-btn">Create Account</button>
+      <p>Already have an account? <a id="show-login">Back to login</a></p>
+    </div>
+  </div>
+</div>
 
+<script type="module">
+import { initializeApp } from "https://www.gstatic.com/firebasejs/12.3.0/firebase-app.js";
+import { getAuth, createUserWithEmailAndPassword, signInWithEmailAndPassword, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/12.3.0/firebase-auth.js";
+import { getDatabase, ref, set, get, child } from "https://www.gstatic.com/firebasejs/12.3.0/firebase-database.js";
+
+const firebaseConfig = {
+  apiKey: "AIzaSyAAOy6HTJ7DCg3jGqCzrvQPWVhtU9umJ0E",
+  authDomain: "gurtchat-237b3.firebaseapp.com",
+  databaseURL: "https://gurtchat-237b3-default-rtdb.firebaseio.com",
+  projectId: "gurtchat-237b3",
+  storageBucket: "gurtchat-237b3.firebasestorage.app",
+  messagingSenderId: "762205720734",
+  appId: "1:762205720734:web:e96c0888b31155380aeb8f"
+};
+
+const app = initializeApp(firebaseConfig);
+const auth = getAuth(app);
+const db = getDatabase(app);
+let authInitialized = false;
+
+// Form toggle
+document.getElementById("show-register").addEventListener("click", () => {
+  document.getElementById("login-form").style.display = "none";
+  document.getElementById("register-form").style.display = "block";
+});
+document.getElementById("show-login").addEventListener("click", () => {
+  document.getElementById("register-form").style.display = "none";
+  document.getElementById("login-form").style.display = "block";
+});
+
+// Register
+document.getElementById("register-btn").addEventListener("click", async ()=>{
+  const username = document.getElementById("register-username").value.trim();
+  const email = document.getElementById("register-email").value.trim();
+  const password = document.getElementById("register-password").value.trim();
+  if(!username||!email||!password)return alert("Fill in all fields");
+
+  try{
+    const userCredential = await createUserWithEmailAndPassword(auth,email,password);
+    const user = userCredential.user;
+    await set(ref(db,"users/"+user.uid),{
+      username:username,
+      email:email,
+      isAdmin:false,
+      createdAt:new Date().toISOString()
+    });
+    localStorage.setItem("gurtchat_username",username);
+    window.location.href="chat.html";
+  }catch(e){
+    alert("Account creation failed");
+  }
+});
+
+// Login
+document.getElementById("login-btn").addEventListener("click", async ()=>{
+  const email=document.getElementById("login-email").value.trim();
+  const password=document.getElementById("login-password").value.trim();
+  if(!email||!password)return alert("Fill in all fields");
+  try{
+    const userCredential = await signInWithEmailAndPassword(auth,email,password);
+    const user=userCredential.user;
+    const snapshot = await get(child(ref(db),`users/${user.uid}/username`));
+    if(snapshot.exists()) localStorage.setItem("gurtchat_username",snapshot.val());
+    window.location.href="chat.html";
+  }catch(e){
+    alert("Account doesn’t exist");
+  }
+});
+
+// Redirect if already logged in
+onAuthStateChanged(auth,(user)=>{
+  if(!authInitialized){
+    authInitialized=true;
+    if(user) window.location.href="chat.html";
+  }
+});
+</script>
+</body>
+</html>
