--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
             <li class="Right">
             </li>
         </ul>
-    </nav>
+  </nav>
+  <main>
+    <h1>Home</h1>
+  </main>
 </body>
 </html>
