Change title to 'Home' and add main section
Updated the title and added a main section with a heading.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Untitled</title>
+  <title>Home</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body class="home">
   <nav>
@@ -14,11 +15,6 @@
                 </a>
             </li>
             <li>
-                <a href="About.html">
-                    <div class="Navigation_element">About</div>
-                </a>
-            </li>
-            <li>
                 <a href="projects.html">
                     <div class="Navigation_element">Projects</div>
                 </a>
@@ -26,6 +22,9 @@
             <li class="Right">
             </li>
         </ul>
-    </nav>
+  </nav>
+  <main>
+    <h1>Home</h1>
+  </main>
 </body>
 </html>
