--- a/projects.html
+++ b/projects.html
@@ -1,12 +1,37 @@
 <!doctype html>
-<html>
+<html lang="en">
   <head>
+    <meta charset="utf-8">
     <title>Projects</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>Projects</h1>
+    <nav>
+      <!-- Navigation Menu -->
+      <ul>
+          <li>
+              <a href="Index.html">
+                  <div class="Navigation_element">Home</div>
+              </a>
+          </li>
+          <li>
+              <a href="projects.html">
+                  <div class="Navigation_element">Projects</div>
+              </a>
+          </li>
+          <li class="Right">
+          </li>
+      </ul>
+  </nav>
+  <main>
+    <header>
+      <div>
+      <h1>Projects</h1>
+      </div>
+    </header>
     <ul>
-      <li><a href="/projects/chatserver/index.html">Chat server</a></li>
+      <li><div id="ChatServerButton"><a href="/projects/chatserver/index.html">Chat server</a></div></li>
     </ul>
+    </main>
   </body>
 </html>
